Bug 61345, 62388         For bug 61345         Add vertical divider to all the zca ui toolbar         For bug 62388         Modify the way to generate defalut server.         Adjust the spacing around controls is too huge, too spacious, for         Installation types and Basic Information screeens. Move the text         boxes closer to the labels.         Change the select step name's font color and remove the selected         item's background         Change the background color of Zimbra Service Status bar         Fix some bugs that has hard reference to ZaConfigXwiard. It will         cause js error.         Remove some hard code label name. Integrate from ZCA-711 to HELIX
http://bugzilla.zimbra.com/show_bug.cgi?id=61345
http://bugzilla.zimbra.com/show_bug.cgi?id=62388

Copied from Perforce
 Change: 324471

--- a/WebRoot/css/zmadmin.css
+++ b/WebRoot/css/zmadmin.css
@@ -147,6 +147,24 @@
 	@ToolbarBg@
 }
 
+.ZaLeftBracket {
+	@LeftSeparator@
+    @TopSeparator@
+    @BottomSeparator@
+	margin-left:3px;
+	padding-right:4px;
+	height: 16px;
+}
+
+.ZaRightBracket {
+	@RightSeparator@
+    @TopSeparator@
+    @BottomSeparator@
+	margin-left:3px;
+	padding-right:4px;
+	height: 16px;
+}
+
 .ZaUpdatedLabel {
 	margin-left: 5px;
 }
